[tool.poetry]
name = "moderation-service"
version = "0.1.0"
description = "HTTP service for text content moderation"
authors = ["Alexis Haim <alexishaim@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.40.0"
loguru = "^0.7.2"
fastapi = "^0.110.2"
torch = "^2.2.2"
uvicorn = "^0.29.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
